ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hashgen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hashresponse-dep
                port:
                  number: 8080
